--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -28,3 +28,5 @@ end
 # Performance-booster for watching directories on Windows
 gem "wdm", "~> 0.1.1", :platforms => [:mingw, :x64_mingw, :mswin]
 
+# For Ruby 3.0 or higher: since Ruby 3.0.0 webrick is no longer bundled.
+gem 'webrick'
